--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/photoswipe.css?v=0.31">
     <link rel="stylesheet" href="./css/default-skin/default-skin.css?v=0.31">
     <link rel="stylesheet" href="./css/swiper.min.css?v=0.31">
-    <link rel="stylesheet" href="./css/index.css?v=0.35">
+    <link rel="stylesheet" href="./css/index.css?v=0.36">
 </head>
 <body>
 
@@ -49,7 +49,7 @@
      aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
-            <form method="post" action="">
+            <form>
                 <div class="modal-header">
                     <h5 class="modal-title">请登录/注册：</h5>
                 </div>
@@ -196,10 +196,10 @@
 <script type="text/javascript" src="./js/swiper.min.js?v=0.1"></script>
 <script type="text/javascript" src="./js/paste.js?v=0.1"></script>
 <script type="text/javascript" src="./js/exif.js"></script>
-<script type="text/javascript" src="./js/LjkUpload.js?v=0.1"></script>
+<script type="text/javascript" src="./js/avatar.js?v=0.2"></script>
 <script type="text/javascript" src="./js/html5ImgCompress/html5ImgCompress.min.js"></script>
 <script type="text/javascript" src="./js/adapter.js"></script>
 <script type="text/javascript" src="./js/msgpack.min.js"></script>
-<script type="text/javascript" src="./js/index.js?v=1.39"></script>
+<script type="text/javascript" src="./js/index.js?v=1.40"></script>
 </body>
 </html>
