--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
 <script type="text/javascript" src="./js/exif.js"></script>
 <script type="text/javascript" src="./js/avatar.js?v=0.2"></script>
 <script type="text/javascript" src="./js/html5ImgCompress/html5ImgCompress.min.js"></script>
-<script type="text/javascript" src="./js/adapter.js"></script>
+<script type="text/javascript" src="./js/adapter.js?v=1.0"></script>
 <script type="text/javascript" src="./js/msgpack.min.js"></script>
-<script type="text/javascript" src="./js/index.js?v=1.41"></script>
+<script type="text/javascript" src="./js/index.js?v=1.43"></script>
 </body>
 </html>
