使用libevent+Event处理协议，尝试解决粘包问题；多进程模型改进：1 master 协议处理 + N worker 业务处理

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/animate.min.css">
     <link rel="stylesheet" href="./css/photoswipe.css?v=0.31">
     <link rel="stylesheet" href="./css/default-skin/default-skin.css?v=0.31">
-    <link rel="stylesheet" href="./css/swiper.min.css?v=0.31">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css?v=0.31">
     <link rel="stylesheet" href="./css/index.css?v=0.36">
 </head>
 <body>
@@ -193,13 +193,13 @@
 <script type="text/javascript" src="./js/layer_mobile/layer.js"></script>
 <script type="text/javascript" src="./js/photoswipe.min.js?v=0.1"></script>
 <script type="text/javascript" src="./js/photoswipe-ui-default.min.js?v=0.1"></script>
-<script type="text/javascript" src="./js/swiper.min.js?v=0.1"></script>
+<script type="text/javascript" src="./js/swiper/swiper-bundle.min.js?v=0.1"></script>
 <script type="text/javascript" src="./js/paste.js?v=0.1"></script>
 <script type="text/javascript" src="./js/exif.js"></script>
 <script type="text/javascript" src="./js/avatar.js?v=0.2"></script>
 <script type="text/javascript" src="./js/html5ImgCompress/html5ImgCompress.min.js"></script>
 <script type="text/javascript" src="./js/adapter.js?v=1.0"></script>
-<script type="text/javascript" src="./js/msgpack.min.js"></script>
+<script type="text/javascript" src="./js/msgpackr.min.js"></script>
 <script type="text/javascript" src="./js/index.js?v=1.1"></script>
 </body>
 </html>
